k8s_deployment_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: devsecops
  name: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops
  strategy: {}
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      volumes:
      - name: tmp_vol
        emptyDir: {}
      serviceAccountName: default
      containers: 
      - image: replace
        name: devsecops-container
        volumeMounts:
        - name: tmp_vol
          mountPath: /tmp
        securityContext:
          runAsUser: 100
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devsecops
  name: devsecops-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: devsecops
  type: NodePort
